<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/aboutUs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/aboutContest"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_about" />

        <FrameLayout
            android:id="@+id/add"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:antialias="true"
                android:background="@drawable/bg_naonod_com" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/about_find_us_on_naonod_com"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/gray_light"
            android:gravity="center_horizontal"
            android:text="@string/about_application_mobile_design"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvAboutJulien"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/about_julien"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray_light"
            android:gravity="center_horizontal"
            android:text="@string/about_website"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvAboutThomas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/about_thomas"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray_light"
            android:gravity="center_horizontal"
            android:text="@string/about_backend"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvAboutArzhel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.15"
                android:gravity="center_horizontal"
                android:text="@string/about_arzhel"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:drawablePadding="-15dp"
                android:drawableStart="@drawable/bg_about_and"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/and_amp"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvAboutJeremy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="18dp"
                android:layout_weight="0.15"
                android:gravity="center_horizontal"
                android:text="@string/about_jeremy"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/aboutContest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:gravity="bottom"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/about_contest"
        android:textColor="@android:color/white"
        android:textSize="12dp" />

</RelativeLayout>