<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/blue" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@+id/vSeparator"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="24dp" />

        <View
            android:id="@+id/vSeparator"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@+id/ibHelp"
            android:background="#ffffff" />

        <ImageButton
            android:id="@+id/ibHelp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_actionbar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/actionbar_help" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/llAllPOIs"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/button_gray"
                    android:gravity="center_vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="4dp"
                        android:text="@string/poi_search_view_all_pois"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/navigation_next" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:visibility="gone" >

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_weight="0.4"
                        android:background="@color/blue_light" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/or"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_weight="0.4"
                        android:background="@color/blue_light" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="@string/poi_search_guide_me"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <CheckBox
                    android:id="@+id/cbParks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poi_type_parks" />

                <CheckBox
                    android:id="@+id/cbPubs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poi_type_pubs" />

                <CheckBox
                    android:id="@+id/cbRestaurants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poi_type_restaurants" />

                <CheckBox
                    android:id="@+id/cbCulture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poi_type_culture" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/pbSearching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light" />

    <Button
        android:id="@+id/bPOISearch"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_gray"
        android:text="@string/poi_search_find_activities"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

</LinearLayout>